# blackjack

./: README.md
.github/workflows/: backends.cd.yml  clients.cd.yml
client/: .eslintrc.json  .gitignore  Dockerfile  README.md  package.json
client/src/: index.tsx  types.ds.ts
client/src/@types/: resources.ts
client/src/components/App/: App.tsx
client/src/components/ModalsManager/: ModalsManager.tsx
client/src/components/ModalsManager/Modals/: EnterForm.tsx
client/src/constants/: constants.ts
client/src/hooks/: useCardDelays.ts  useInitialDealingState.ts  useProgressiveTotal.ts
client/src/i18n/: index.ts
client/src/i18n/locales/: en.json  tr.json
client/src/models/: game.ts
client/src/pages/GamePage/: GamePage.tsx
client/src/pages/GamePage/BetPanel/: Bet.tsx  BetPanel.tsx
client/src/pages/GamePage/Card/: Card.styled.ts  CardComponent.tsx
client/src/pages/GamePage/GameActions/: GameActionsComponent.tsx  Timer.tsx
client/src/pages/GamePage/PlayerSpot/: DealerSpotComponent.tsx  HandComponent.tsx  PlayerSpotComponent.tsx  (+1 more)
client/src/server/: socket.ts
client/src/sounds/: SoundsContainer.tsx  WithSound.tsx
client/src/utils/: convertToChips.ts
infra/docker/: .env.backend  .env.blackjack-frontend  docker-compose.yml
server/: .envrc  Dockerfile  README.md  pyproject.toml
server/blackjack/: cli.py  config.py  enums.py  game.py  main.py  route.py  schemas.py  socketio_test.py  utils.py  websockets.py
server/blackjack/models/: game.py  hand.py  player.py
server/blackjack/models/blueprints/: config.py  generate_blueprints.py
